--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,18 +1,20 @@
-@import '../../styles/base.scss';
+@import "../../styles/base.scss";
 
 .footer {
-    position: fixed;
-    bottom: 0;
+  position: sticky;
+  bottom: 0;
+
   width: 100%;
+  height: $footer-height;
   background-color: $light-white;
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+  }
 }
