--- a/components/AboutMe/AboutMe.module.scss
+++ b/components/AboutMe/AboutMe.module.scss
@@ -4,6 +4,7 @@ $sky-blue: #00a1ff;
 $para-size: 1.5rem;
 $heading-size: 2.5rem;
 
+// animations
 @keyframes scaleUp {
     from{
         transform: scale(0.1);
@@ -12,6 +13,7 @@ $heading-size: 2.5rem;
         transform: scale(1);
     }
 }
+
 @keyframes rotateSideways {
     0%, 100%{
         transform: rotateY(0deg);
@@ -20,6 +22,7 @@ $heading-size: 2.5rem;
         transform: rotateY(180deg);
     }
 }
+
 
 
 .hero{   
@@ -31,6 +34,7 @@ $heading-size: 2.5rem;
     h1{
         font-size: $heading-size;
         margin-top: 70px;
+        
         animation: scaleUp 1s 1;
 
         span{
@@ -38,37 +42,48 @@ $heading-size: 2.5rem;
             text-shadow: 2px 2px 1px $name-text-shadow;
         }
         .flip{
-            animation: rotateSideways 0.5s ease-out;
             color: $sky-blue;
+
+            animation: rotateSideways 0.5s ease-out;
         }
     }
+
     article{
         margin-top: 50px;
+
+        @media screen and (max-width: 500px) {
+            padding: 0 10px;
+        }
     }
+
     .link{
+        position: relative;
+
+        width: fit-content;
         margin: 50px auto;
+        color: black;
         padding: 10px 20px;
         border-radius: 5px;
         border: 5px solid $sky-blue;
-        color: black;
-        width: fit-content;
-        position: relative;
         @include fadeIn(link);
 
         &:hover{
             color: #fff;
         }
+
         &:before{
-            content: "";
-            position: absolute;
+            @include pseudoContent(auto, auto);
             top: 100%;
             left: 0;
             right: 0;
             bottom: 0;
-            z-index: -1;
             background-color: $sky-blue;
+            
+            z-index: -1;
+            
             transition: top 0.3s ease-in;
         }
+        
         &:hover::before{
             top: 0;
         }
