--- a/components/Layout/Navbar/Navbar.module.scss
+++ b/components/Layout/Navbar/Navbar.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/base.scss';
+@import '../../../styles/base.scss';
 $navbar-bg: #fff;
 
 @mixin minWidthDisplay($size, $display, $visibility) {
