--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -1,20 +1,19 @@
 @import "../../styles/base.scss";
-$lighter-gray: rgb(220, 220, 220);
-$light-gray: rgb(250, 250, 250);
+$lighter-gray: rgb(250, 250, 250);
+$light-gray: rgb(220, 220, 220);
 $gray: rgb(192, 192, 192);
+$selected-tag: #b777f3;
 
 @keyframes moveUp {
   from {
     top: 0px;
     left: 8px;
-    color: #7575a0;
     background-color: transparent;
   }
   to {
-    top: -15px;
+    top: -20px;
     left: 2px;
     color: #000;
-    background-color: white;
   }
 }
 
@@ -36,45 +35,69 @@ $gray: rgb(192, 192, 192);
         font-weight: 500;
         display: none;
       }
+
       :not(input:placeholder-shown) + .label {
         display: inline-block;
-        top: -15px;
+        top: -20px;
         left: 2px;
-        background-color: white;
 
+        // background-color: white;
         animation: moveUp 0.2s;
       }
+
       input {
         border: transparent;
         border-radius: 2px;
+        min-width: 260px;
         height: 30px;
-        min-width: 300px;
         padding: 0 10px;
         background-color: $light-gray;
       }
     }
 
     .tags{
+      position: relative;
+
       span:hover{
         background-color: $gray;
         cursor: pointer;
       }
     }
+
+    .selectedTag{
+      background-color: $selected-tag;
+      img{
+        transform: rotate(90deg);
+      }
+    }
   }
+
   .tags {
     margin: 10px;
 
     span {
+      display: inline-flex;
+      align-items: center;
+
       margin: 5px;
-      padding: 0px 10px;
-      border-radius: 20px;
-      background-color: $light-gray;
+      padding: 0px 5px;
+      background-color: $lighter-gray;
       border: 1px solid gray;
+      border-radius: 20px;
     }
   }
 
   .cardContainer {
     margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 20px;
+
+    h2{
+      flex-basis: 100%;
+      margin-bottom: 10px;
+    }
 
     .card {
       display: inline-flex;
@@ -82,20 +105,21 @@ $gray: rgb(192, 192, 192);
       justify-content: space-between;
 
       position: relative;
-      width: 18rem;
+      width: 275px;
       height: 25rem;
       margin: 10px;
       
       text-align: justify;
+      cursor: pointer;
       overflow: hidden;
       border-radius: 5px;
-      // background-color: royalblue;
       border: 1px solid $lighter-gray;
       box-shadow: 0px 0px 10px $lighter-gray, 5px 5px 10px $gray;
       
       img{
-        background-color: red;
+        background-color: $light-gray;
       }
+  
       h3{
         padding: 10px 15px 0px;
       }
