--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -17,6 +17,15 @@ $selected-tag: #b777f3;
   }
 }
 
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
 .projects {
   text-align: center;
 
@@ -65,7 +74,8 @@ $selected-tag: #b777f3;
     }
 
     .selectedTag{
-      background-color: $selected-tag;
+      // background-color: $selected-tag;
+      border: 2px solid #000;
       img{
         transform: rotate(90deg);
       }
@@ -73,7 +83,7 @@ $selected-tag: #b777f3;
   }
 
   .tags {
-    margin: 10px;
+    margin: 5px 10px;
 
     span {
       display: inline-flex;
@@ -91,18 +101,27 @@ $selected-tag: #b777f3;
     margin: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     padding: 20px;
 
-    h2{
+    h2, h3, h4{
       flex-basis: 100%;
       margin-bottom: 10px;
     }
+    
+    h3{
+      margin: 10px 0;
+      text-align: left;
+    }
+
+    h4{
+      text-align: center;
+      margin: 10px;
+    }
 
     .card {
-      display: inline-flex;
-      flex-direction: column;
-      justify-content: space-between;
+      display: grid;
+      grid-template-rows: 5rem 2rem auto auto 3rem;
 
       position: relative;
       width: 275px;
@@ -116,17 +135,31 @@ $selected-tag: #b777f3;
       border: 1px solid $lighter-gray;
       box-shadow: 0px 0px 10px $lighter-gray, 5px 5px 10px $gray;
       
-      img{
+      .img{
         background-color: $light-gray;
+        text-align: center;
       }
-  
-      h3{
-        padding: 10px 15px 0px;
+
+      .logo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        position: absolute;
+        top: 1.5rem;
+        left: calc(50% - 2rem);
+        height: 4rem;
+        width: 4rem;
+
+        background-color: #fff;
+        border: 2px solid $light-gray;
+        border-radius: 50%;
+
+        animation: rotate 5s infinite linear;
       }
 
       article{
         padding: 5px 15px;
-        height: 28%;
         overflow: hidden;
         position: relative;
 
@@ -144,6 +177,7 @@ $selected-tag: #b777f3;
       display: flex;
       justify-content: space-between;
       margin: 5px 10px;
+      height: 35px;
 
       a{
         border: 2px solid $gray;
