added icons from uxwing which are free and removed the logo from project card. Resized the parts inside card and added a new featured projects component which displays all the projects as of now, it needs to be changed.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,6 +22,21 @@ body {
 }
 
 
+.tags {
+  margin: 5px 10px;
+
+  span {
+    display: inline-flex;
+    align-items: center;
+
+    margin: 5px;
+    padding: 0px 5px;
+    background-color: $lighter-gray;
+    border: 1px solid gray;
+    border-radius: 20px;
+  }
+}
+
 a{
   color: #000;
   text-decoration: none;
