--- a/components/GetInTouch/GetInTouch.module.scss
+++ b/components/GetInTouch/GetInTouch.module.scss
@@ -100,7 +100,7 @@ $cta-color: aquamarine;
           height: 35px;
           width: 35px;
           border-radius: 50%;
-          padding: 0 5px;
+          background-color: #fff;
         }
       }
     }
