--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -1,7 +1,4 @@
 @import "../../styles/base.scss";
-$lighter-gray: rgb(250, 250, 250);
-$light-gray: rgb(220, 220, 220);
-$gray: rgb(192, 192, 192);
 $selected-tag: #b777f3;
 
 @keyframes moveUp {
@@ -74,26 +71,14 @@ $selected-tag: #b777f3;
     }
 
     .selectedTag{
-      // background-color: $selected-tag;
-      border: 2px solid #000;
-      img{
-        transform: rotate(90deg);
-      }
-    }
-  }
-
-  .tags {
-    margin: 5px 10px;
-
-    span {
       display: inline-flex;
-      align-items: center;
-
-      margin: 5px;
-      padding: 0px 5px;
-      background-color: $lighter-gray;
-      border: 1px solid gray;
-      border-radius: 20px;
+      justify-content: space-between;
+      border: 2px solid #000;
+      padding: 0 0 0 5px;
+      
+      div{
+        margin: 0 5px;
+      }
     }
   }
 
@@ -116,78 +101,7 @@ $selected-tag: #b777f3;
 
     h4{
       text-align: center;
-      margin: 10px;
-    }
-
-    .card {
-      display: grid;
-      grid-template-rows: 5rem 2rem auto auto 3rem;
-
-      position: relative;
-      width: 275px;
-      height: 25rem;
-      margin: 10px;
-      
-      text-align: justify;
-      cursor: pointer;
-      overflow: hidden;
-      border-radius: 5px;
-      border: 1px solid $lighter-gray;
-      box-shadow: 0px 0px 10px $lighter-gray, 5px 5px 10px $gray;
-      
-      .img{
-        background-color: $light-gray;
-        text-align: center;
-      }
-
-      .logo{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        position: absolute;
-        top: 1.5rem;
-        left: calc(50% - 2rem);
-        height: 4rem;
-        width: 4rem;
-
-        background-color: #fff;
-        border: 2px solid $light-gray;
-        border-radius: 50%;
-
-        animation: rotate 5s infinite linear;
-      }
-
-      article{
-        padding: 5px 15px;
-        overflow: hidden;
-        position: relative;
-
-        &::after{
-          @include pseudoContent(20px, 100px);
-          background: linear-gradient(to right, transparent, #fff);
-          right: 10px;
-          bottom: 0;
-        }
-      }
-
-    }
-
-    .actions{
-      display: flex;
-      justify-content: space-between;
-      margin: 5px 10px;
-      height: 35px;
-
-      a{
-        border: 2px solid $gray;
-        padding: 5px 10px;
-        border-radius: 2px;
-
-        &:hover{
-          background-color: skyblue;
-        }
-      }
+      margin: 2px auto;
     }
   }
 }
