--- a/styles/base.scss
+++ b/styles/base.scss
@@ -10,6 +10,11 @@ $heading-size: 2.5rem;
 $footer-height: 30px;
 $navbar-height: 70px;
 
+// project cards related color
+$lighter-gray: rgb(250, 250, 250);
+$light-gray: rgb(220, 220, 220);
+$gray: rgb(192, 192, 192);
+
 @mixin fadeIn($name) {
     animation: $name 3s;
   
