--- a/components/Projects/Card/Card.module.scss
+++ b/components/Projects/Card/Card.module.scss
@@ -2,11 +2,12 @@
 
 .card {
   display: grid;
-  grid-template-rows: 9rem 1.6rem auto auto 3rem;
-
-  position: relative;
-  width: 275px;
-  height: 25rem;
+  grid-template-rows: 90% 10%;
+  
+  // position: relative;
+  width: 100%;
+  height: 20rem;
+  max-width: 25rem;
   margin: 10px;
 
   text-align: justify;
@@ -15,41 +16,192 @@
   border-radius: 5px;
   border: 1px solid $lighter-gray;
   box-shadow: 0px 0px 10px $lighter-gray, 5px 5px 10px $gray;
-
-  .img {
+  
+  .img, .modalImage {
     background-color: $light-gray;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+  
+  h4{
+    text-align: center;
+    align-items: center;
+    margin: auto;
+  }
 
-  article {
-    padding: 5px 15px;
-    overflow: hidden;
-    position: relative;
+  .hideModal{
+    display: none;
+  }
+  
+  .modalForDetails{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    &::after {
-      @include pseudoContent(20px, 100px);
-      background: linear-gradient(to right, transparent, #fff);
-      right: 10px;
-      bottom: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+
+    background-color: rgba(70, 70, 70, 0.500);
+    z-index: 2;
+
+    @media screen and (max-width: 500px) {
+      align-items: unset;
+      width: auto;
+    }
+
+    .modalContent{
+      display: grid;
+      grid-template-columns: repeat(2, 50%);
+      
+      position: relative;
+      min-height: 50vh;
+      margin: auto 10px;
+      background-color: rgb(73, 73, 73);
+      color: #fff;
+      
+      @media screen and (max-width:900px) {
+        grid-template-columns: auto;
+        grid-template-rows: repeat(2, auto);
+        
+        margin: 10px;
+        min-height: auto;
+        max-width: 25rem;
+      }
+      
+      @media screen and (max-width:500px) {
+        max-width: none;
+      }
+
+      .modalImage{
+        font-size: 3rem;
+        min-width: 25rem;
+
+        @media screen and (max-width:900px) {
+          min-width: auto;
+        }
+      }
+      
+      .details{
+        display: flex;
+        flex-direction: column;
+        
+        padding: 10px;
+        
+        .closeModal{
+          position: absolute;
+          top: 10px;
+          right: 10px;
+        }
+        
+        .type{
+          color: $light-gray;
+        }
+        
+        article{
+          height: 100%;
+          
+          p{
+            padding: 5px;
+            margin: 0 10px;
+          }
+        }
+
+        .actions {
+          display: flex;
+          justify-content: space-between;
+          height: 35px;
+          margin: 5px 10px;
+          bottom: 10px;
+        
+          a {
+            color: inherit;
+            border: 2px solid $gray;
+            padding: 5px 10px;
+            border-radius: 2px;
+        
+            &:hover {
+              background-color: skyblue;
+            }
+          }
+        }
+      }
     }
   }
+
+  // article {
+  //   padding: 5px 15px;
+  //   overflow: hidden;
+  //   position: relative;
+
+  //   &::after {
+  //     @include pseudoContent(20px, 100px);
+  //     background: linear-gradient(to right, transparent, #fff);
+  //     right: 10px;
+  //     bottom: 0;
+  //   }
+  // }
+
 }
 
-.actions {
-  display: flex;
-  justify-content: space-between;
-  margin: 5px 10px;
-  height: 35px;
+// .card {
+//   display: grid;
+//   grid-template-rows: 9rem 1.6rem auto auto 3rem;
 
-  a {
-    border: 2px solid $gray;
-    padding: 5px 10px;
-    border-radius: 2px;
+//   position: relative;
+//   width: 275px;
+//   height: 25rem;
+//   margin: 10px;
 
-    &:hover {
-      background-color: skyblue;
-    }
-  }
-}
+//   text-align: justify;
+//   cursor: pointer;
+//   overflow: hidden;
+//   border-radius: 5px;
+//   border: 1px solid $lighter-gray;
+//   box-shadow: 0px 0px 10px $lighter-gray, 5px 5px 10px $gray;
+  
+//   .img {
+//     background-color: $light-gray;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
+
+//   h4{
+//     text-align: center;
+//   }
+
+//   article {
+//     padding: 5px 15px;
+//     overflow: hidden;
+//     position: relative;
+
+//     &::after {
+//       @include pseudoContent(20px, 100px);
+//       background: linear-gradient(to right, transparent, #fff);
+//       right: 10px;
+//       bottom: 0;
+//     }
+//   }
+
+//   .actions {
+//     display: flex;
+//     justify-content: space-between;
+//     margin: 5px 10px;
+//     height: 35px;
+  
+//     a {
+//       border: 2px solid $gray;
+//       padding: 5px 10px;
+//       border-radius: 2px;
+  
+//       &:hover {
+//         background-color: skyblue;
+//       }
+//     }
+//   }
+// }
+
