--- a/components/GetInTouch/GetInTouch.module.scss
+++ b/components/GetInTouch/GetInTouch.module.scss
@@ -1,5 +1,4 @@
 @import "../../styles/base.scss";
-$cta-color: aquamarine;
 
 .contactUs {
   text-align: center;
@@ -74,7 +73,7 @@ $cta-color: aquamarine;
       
         &:hover .label {
           opacity: 0;
-        
+          z-index: -1;
           transition: opacity 0.5s 0.125s ease-out;
         }
         &:hover .icon {
@@ -82,7 +81,7 @@ $cta-color: aquamarine;
           margin: 0 0;
         }
         .icon, .label{
-          background-color: aquamarine;
+          background-color: $cta-color;
         }
       
         .label{
@@ -91,8 +90,9 @@ $cta-color: aquamarine;
           right: 0;
           left: 0;
           bottom: 0;
+
           opacity: 1;
-        
+          cursor: pointer;
           transition: opacity .5s .75s ease-out;
         }
         
@@ -101,6 +101,10 @@ $cta-color: aquamarine;
           width: 35px;
           border-radius: 50%;
           background-color: #fff;
+
+          &:hover{
+            background-color: $cta-color;
+          }
         }
       }
     }
