--- a/components/Projects/Card/Card.module.scss
+++ b/components/Projects/Card/Card.module.scss
@@ -4,9 +4,9 @@
   display: grid;
   grid-template-rows: 90% 10%;
   
-  // position: relative;
+  position: relative;
   width: 100%;
-  height: 20rem;
+  height: 18rem;
   max-width: 25rem;
   margin: 10px;
 
@@ -17,11 +17,15 @@
   border: 1px solid $lighter-gray;
   box-shadow: 0px 0px 10px $lighter-gray, 5px 5px 10px $gray;
   
-  .img, .modalImage {
+  .img, .modalImage, img {
     background-color: $light-gray;
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
   }
   
   h4{
@@ -63,6 +67,10 @@
       background-color: $modal-content-bg;
       color: #fff;
       
+      h2{
+        flex-basis: auto;
+      }
+
       @media screen and (max-width:900px) {
         grid-template-columns: auto;
         grid-template-rows: repeat(2, auto);
@@ -90,11 +98,14 @@
         flex-direction: column;
         
         padding: 10px;
-        
+        cursor: default;
+
         .closeModal{
           position: absolute;
           top: 10px;
           right: 10px;
+
+          cursor: pointer;
         }
         
         .type{
@@ -103,11 +114,15 @@
         
         article{
           height: 100%;
-          max-width: 40vw;
           
           p{
             padding: 5px;
             margin: 0 10px;
+          }
+          
+          @media screen and (max-width: 500px) {
+            max-height: 200px;
+            overflow-y: scroll;
           }
         }
 
