--- a/components/Projects/FeaturedProjects.module.scss
+++ b/components/Projects/FeaturedProjects.module.scss
@@ -10,6 +10,7 @@
 
     .projects{
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
@@ -19,5 +20,9 @@
         margin: 10px auto;
         font-size: 1.1rem;
         font-weight: 600;
+
+        @media screen and (max-width: 400px) {
+            margin: 20px auto 50px;
+        }
     }
 }
