--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,13 +27,14 @@ body {
 .tags {
   margin: 5px 10px;
   color: #000;
-
+  
   span {
     display: inline-flex;
     align-items: center;
-
+    
+    cursor: pointer;
     margin: 5px;
-    padding: 0px 5px;
+    padding: 1px 10px;
     background-color: $lighter-gray;
     border: 1px solid gray;
     border-radius: 20px;
