--- a/components/GetInTouch/GetInTouch.module.scss
+++ b/components/GetInTouch/GetInTouch.module.scss
@@ -2,14 +2,14 @@
 
 .contactUs {
   text-align: center;
-  font-size: $para-size;
+  @include setFontSize($text-small);
 
   h1 {
     margin-bottom: 20px;
-    font-size: $heading-size;
+    @include setFontSize($heading-small);
   }
 
-  article{
+  article {
     padding: 0 10px;
   }
 
@@ -17,7 +17,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    
+
     margin-top: 20px;
 
     // animation
@@ -29,37 +29,38 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-    
+
       max-width: 40vw;
       min-width: 250px;
       min-height: 16rem;
       padding: 10px;
       border: 1px solid #000;
       margin: 10px;
-    
+
       transform: translate(0px, 0px);
-      
+
       article * {
-          margin: 10px auto;
+        margin: 10px auto;
       }
-    
+
       button {
         padding: 10px 20px;
       }
-    
-      .callNow, .chatNow{
+
+      .callNow,
+      .chatNow {
         width: 10rem;
         margin: auto;
       }
-      
-      .callNow{
+
+      .callNow {
         background-color: $cta-color;
 
-        &:hover{
+        &:hover {
           background-color: transparent;
           font-weight: 600;
-          
-          transition:  background-color 1s;
+
+          transition: background-color 1s;
         }
       }
 
@@ -67,10 +68,11 @@
         display: flex;
         justify-content: space-evenly;
         position: relative;
-        
+
         text-align: center;
+        font-size: small;
         margin: auto;
-      
+
         &:hover .label {
           opacity: 0;
           z-index: -1;
@@ -80,11 +82,12 @@
           border-radius: 1em;
           margin: 0 0;
         }
-        .icon, .label{
+        .icon,
+        .label {
           background-color: $cta-color;
         }
-      
-        .label{
+
+        .label {
           position: absolute;
           top: 0;
           right: 0;
@@ -93,16 +96,16 @@
 
           opacity: 1;
           cursor: pointer;
-          transition: opacity .5s .75s ease-out;
+          transition: opacity 0.5s 0.75s ease-out;
         }
-        
-        .icon{
+
+        .icon {
           height: 35px;
           width: 35px;
           border-radius: 50%;
           background-color: #fff;
 
-          &:hover{
+          &:hover {
             background-color: $cta-color;
           }
         }
