--- a/components/Layout/Navbar/Navbar.module.scss
+++ b/components/Layout/Navbar/Navbar.module.scss
@@ -51,10 +51,10 @@
     width: 100%;
     min-height: $navbar-height;
     padding: 10px 20px;
-    font-size: 1.2em;
     background-color: $navbar-bg;
     box-shadow: 0px 0px 10px $box-shadow;
-
+    @include setFontSize($text-medium);
+    
     .brand{
         display: flex;
         align-items: center;
