--- a/styles/base.scss
+++ b/styles/base.scss
@@ -5,17 +5,23 @@ $light-white: #eaeaea;
 $box-shadow: rgb(37, 37, 37);
 
 $para-size: 1.5rem;
-$heading-size: 2.5rem;
+$heading-size: clamp(1.8rem, 6vw, 7rem);
+
+// global responsive text
+// https://stackoverflow.com/questions/15649244/responsive-font-size-in-css/62808509#62808509
+$main-heading-size: clamp(1.8rem, 6vw, 7rem);
+$title: clamp(1.8rem, 5vw, 6rem);
+// $section-heading-size: clamp(1.8rem, 6vw, 7rem);
+$text-size: clamp(0.6rem, 1.4rem, 1.4rem);
 
 $footer-height: 30px;
 $navbar-height: 70px;
 
+// rgb(0, 161, 255)
 $sky-blue: #00a1ff;
 
 // about me page
 $name-text-shadow: rgb(158, 158, 158);
-$para-size: 1.5rem;
-$heading-size: 2.5rem;
 
 // get in touch page
 $cta-color: aquamarine;
@@ -90,5 +96,92 @@ $selected-tag: #b777f3;
     color: inherit;
     text-decoration: none;
     font-weight: 600;
+  }
+}
+
+
+// mobile- s: 320, m:375, l: 425
+// tab 768
+// laptop 1024, l: 1440, 4k: 2500
+
+// $h1: 2rem;
+
+// @media (min-width: 375px){
+//   $h1: 2.2rem;
+// }
+// @media (min-width: 425px){
+//   $h1: 2.5rem;
+// }
+// @media (min-width: 768px){
+//   $h1: 3rem;
+// }
+// @media (min-width: 1024px){
+//   $h1: 3.5rem;
+// }
+// @media (min-width: 1440px){
+//   $h1: 5.5vw;
+// }
+
+$topZIndexLayer: 1000;
+$heading-large: (
+  320px: 2rem,
+  375px: 2.4rem,
+  425px: 2.8rem,
+  768px: 3rem,
+  1024px: 3.2rem,
+  1440px: 3.5rem,
+  2500px: 4.3rem,
+);
+$heading-medium: (
+  320px: 1.9rem,
+  375px: 2.3rem,
+  425px: 2.7rem,
+  768px: 2.9rem,
+  1024px: 3.1rem,
+  1440px: 3.4rem,
+  2500px: 4.2rem,
+);
+$heading-small: (
+  320px: 1.8rem,
+  375px: 2.2rem,
+  425px: 2.6rem,
+  768px: 2.8rem,
+  1024px: 3rem,
+  1440px: 3.3rem,
+  2500px: 4.1rem,
+);
+
+// text within p, article
+$text-small: (
+  320px: 0.8rem,
+  375px: 1rem,
+  425px: 1.2rem,
+  768px: 1.3rem,
+  1440px: 1.3rem,
+  2500px: 2rem,
+);
+$text-medium: (
+  320px: 1rem,
+  375px: 1.2rem,
+  425px: 1.4rem,
+  768px: 1.5rem,
+  1440px: 1.7rem,
+  2500px: 2.8rem,
+);
+$text-large: (
+  320px: 1.3rem,
+  375px: 1.4rem,
+  425px: 1.6rem,
+  1024px: 1.7rem,
+  1440px: 2rem,
+  2500px: 3.2rem,
+);
+
+// set font size according to window size
+@mixin setFontSize($text-type) {
+  @each $width, $fontSize in $text-type {
+    @media screen and (min-width: $width) {
+      font-size: $fontSize;
+    }
   }
 }
