--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,4 @@
-@import 'base';
+@import "base";
 
 * {
   padding: 0;
@@ -13,25 +13,40 @@ body {
   font-family: $font;
 }
 
-.container{
+.container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
-  
-  height: 100%;
   scroll-behavior: smooth;
-  scroll-snap-align: center;
+
+  @media (min-width: 785px) {
+    height: 100%;
+    scroll-snap-align: center;
+  }
 }
 
+// custom scroll bar styles
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(236, 236, 236);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(197, 197, 197);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(156, 156, 156);
+}
 
 .tags {
   margin: 5px 10px;
   color: #000;
-  
+
   span {
     display: inline-flex;
     align-items: center;
-    
+
     cursor: pointer;
     margin: 5px;
     padding: 1px 10px;
@@ -41,7 +56,7 @@ body {
   }
 }
 
-a{
+a {
   color: #000;
   text-decoration: none;
 }
